# todo-app

backend/: README.md  dist.env  pyproject.toml
backend/config/: env.py  settings.py  urls.py
backend/tasks/: admin.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/tasks/management/commands/: assign_permission.py  dummy_data.py
backend/tasks/migrations/: 0001_initial.py  0002_notification_and_more.py
backend/todos/: admin.py  models.py  serializers.py  urls.py  views.py
backend/todos/management/commands/: assign_permission.py
backend/todos/migrations/: 0001_initial.py  0002_todo_user.py  0003_todo_description_todo_due_date_todo_priority_and_more.py  0004_alter_todo_options.py
backend/users/: managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_create_groups.py  0003_alter_customuser_managers.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  utils.js
frontend/src/api/: endpoint.js
frontend/src/components/: AddTodo.jsx  DeleteConfirmModal.jsx  Header.jsx  ProtectedRoute.jsx  PublicRoute.jsx  Task.jsx  TaskFormModal.jsx  TaskList.jsx  Title.jsx  Todo.jsx  TodoFormModal.jsx  TodoList.jsx
frontend/src/contexts/: AuthContext.jsx  choicesContext.jsx
frontend/src/pages/: Home.jsx  Login.jsx  Register.jsx
frontend/src/services/: taskService.js  todoService.js  userService.js
